@@ -25,78 +25,103 @@ import org.graylog.datanode.configuration.variants.SecurityConfigurationVariant;
 import org.graylog.datanode.configuration.variants.UploadedCertFilesSecureConfiguration;
 import org.graylog.datanode.process.OpensearchConfiguration;
 import org.graylog.security.certutil.ca.exceptions.KeyStoreStorageException;
+import org.graylog2.bootstrap.preflight.PreflightConfigResult;
+import org.graylog2.bootstrap.preflight.PreflightConfigService;
+import org.graylog2.cluster.Node;
+import org.graylog2.cluster.nodes.DataNodeDto;
+import org.graylog2.cluster.nodes.NodeService;
 
-import javax.inject.Inject;
-import javax.inject.Provider;
-import javax.inject.Singleton;
+import jakarta.inject.Inject;
+import jakarta.inject.Named;
+import jakarta.inject.Provider;
+import jakarta.inject.Singleton;
+
 import java.io.IOException;
-import java.nio.file.Path;
+import java.nio.charset.StandardCharsets;
 import java.security.GeneralSecurityException;
-import java.util.Collections;
 import java.util.List;
-import java.util.Map;
-import java.util.Objects;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Singleton
 public class OpensearchConfigurationProvider implements Provider<OpensearchConfiguration> {
-
-
     private final Configuration localConfiguration;
     private final UploadedCertFilesSecureConfiguration uploadedCertFilesSecureConfiguration;
     private final MongoCertSecureConfiguration mongoCertSecureConfiguration;
     private final InSecureConfiguration inSecureConfiguration;
     private final DatanodeConfiguration datanodeConfiguration;
+    private final byte[] signingKey;
+    private final NodeService<DataNodeDto> nodeService;
+    private final PreflightConfigService preflightConfigService;
 
     @Inject
-    public OpensearchConfigurationProvider(Configuration localConfiguration,
-                                           DatanodeConfiguration datanodeConfiguration,
-                                           UploadedCertFilesSecureConfiguration uploadedCertFilesSecureConfiguration,
-                                           MongoCertSecureConfiguration mongoCertSecureConfiguration,
-                                           InSecureConfiguration inSecureConfiguration) {
+    public OpensearchConfigurationProvider(final Configuration localConfiguration,
+                                           final DatanodeConfiguration datanodeConfiguration,
+                                           final UploadedCertFilesSecureConfiguration uploadedCertFilesSecureConfiguration,
+                                           final MongoCertSecureConfiguration mongoCertSecureConfiguration,
+                                           final InSecureConfiguration inSecureConfiguration,
+                                           final NodeService<DataNodeDto> nodeService,
+                                           final PreflightConfigService preflightConfigService,
+                                           final @Named("password_secret") String passwordSecret) {
         this.localConfiguration = localConfiguration;
         this.datanodeConfiguration = datanodeConfiguration;
         this.uploadedCertFilesSecureConfiguration = uploadedCertFilesSecureConfiguration;
         this.mongoCertSecureConfiguration = mongoCertSecureConfiguration;
         this.inSecureConfiguration = inSecureConfiguration;
+        this.signingKey = passwordSecret.getBytes(StandardCharsets.UTF_8);
+        this.nodeService = nodeService;
+        this.preflightConfigService = preflightConfigService;
+    }
+
+    private boolean isPreflight() {
+        final PreflightConfigResult preflightResult = preflightConfigService.getPreflightConfigResult();
+
+        // if preflight is finished, we assume that there will be some datanode registered via node-service.
+        return preflightResult != PreflightConfigResult.FINISHED;
     }
 
     @Override
     public OpensearchConfiguration get() {
-        final Path opensearchConfigLocation = Path.of(localConfiguration.getOpensearchConfigLocation());
-
         //TODO: at some point bind the whole list, for now there is too much experiments with order and prerequisites
         List<SecurityConfigurationVariant> securityConfigurationTypes = List.of(
+                inSecureConfiguration,
                 uploadedCertFilesSecureConfiguration,
-                mongoCertSecureConfiguration,
-                inSecureConfiguration //TODO: in final version, this configuration is tried first, not last
+                mongoCertSecureConfiguration
         );
 
-        SecurityConfigurationVariant chosenSecurityConfigurationVariant = securityConfigurationTypes.stream()
-                .filter(s -> s.checkPrerequisites(localConfiguration))
-                .findFirst()
-                .orElseThrow(() -> new OpensearchConfigurationException("No valid option to start up OpenSearch"));
+        Optional<SecurityConfigurationVariant> chosenSecurityConfigurationVariant = securityConfigurationTypes.stream()
+                .filter(s -> s.isConfigured(localConfiguration))
+                .findFirst();
 
         try {
-            final OpensearchSecurityConfiguration securityConfiguration = chosenSecurityConfigurationVariant
-                    .build()
-                    .configure(localConfiguration);
-
             ImmutableMap.Builder<String, String> opensearchProperties = ImmutableMap.builder();
+
+            if (localConfiguration.getInitialManagerNodes() != null && !localConfiguration.getInitialManagerNodes().isBlank()) {
+                opensearchProperties.put("cluster.initial_master_nodes", localConfiguration.getInitialManagerNodes());
+            } else if (isPreflight()) {
+                final var nodeList = String.join(",", nodeService.allActive().values().stream().map(Node::getHostname).collect(Collectors.toSet()));
+                opensearchProperties.put("cluster.initial_master_nodes", nodeList);
+            }
             opensearchProperties.putAll(commonOpensearchConfig(localConfiguration));
-            opensearchProperties.putAll(securityConfiguration.getProperties());
+
+            OpensearchSecurityConfiguration securityConfiguration = null;
+            if (chosenSecurityConfigurationVariant.isPresent()) {
+                securityConfiguration = chosenSecurityConfigurationVariant.get()
+                        .build()
+                        .configure(datanodeConfiguration, signingKey);
+                opensearchProperties.putAll(securityConfiguration.getProperties());
+            }
 
             return new OpensearchConfiguration(
-                    datanodeConfiguration.opensearchDistribution().directory(),
-                    opensearchConfigLocation,
-                    localConfiguration.getHttpBindAddress().getHost(),
+                    datanodeConfiguration.opensearchDistributionProvider().get(),
+                    datanodeConfiguration.datanodeDirectories(),
+                    localConfiguration.getBindAddress(),
                     localConfiguration.getHostname(),
                     localConfiguration.getOpensearchHttpPort(),
                     localConfiguration.getOpensearchTransportPort(),
-                    localConfiguration.getRestApiUsername(),
-                    localConfiguration.getRestApiPassword(),
-                    "datanode-cluster",
+                    localConfiguration.getClustername(),
                     localConfiguration.getDatanodeNodeName(),
-                    Collections.emptyList(),
+                    List.of(),
                     localConfiguration.getOpensearchDiscoverySeedHosts(),
                     securityConfiguration,
                     opensearchProperties.build()
@@ -108,19 +133,16 @@ public class OpensearchConfigurationProvider implements Provider<OpensearchConfi
 
     private ImmutableMap<String, String> commonOpensearchConfig(final Configuration localConfiguration) {
         final ImmutableMap.Builder<String, String> config = ImmutableMap.builder();
-        Objects.requireNonNull(localConfiguration.getConfigLocation(), "config_location setting is required!");
-        localConfiguration.getOpensearchNetworkHostHost().ifPresent(
+        localConfiguration.getOpensearchNetworkHost().ifPresent(
                 networkHost -> config.put("network.host", networkHost));
-        config.put("path.data", Path.of(localConfiguration.getOpensearchDataLocation()).resolve(localConfiguration.getDatanodeNodeName()).toAbsolutePath().toString());
-        config.put("path.logs", Path.of(localConfiguration.getOpensearchLogsLocation()).resolve(localConfiguration.getDatanodeNodeName()).toAbsolutePath().toString());
-        if (localConfiguration.isSingleNodeOnly()) {
-            config.put("discovery.type", "single-node");
-        } else {
-            config.put("cluster.initial_master_nodes", "node1");
-        }
+        config.put("path.data", datanodeConfiguration.datanodeDirectories().getDataTargetDir().toString());
+        config.put("path.logs", datanodeConfiguration.datanodeDirectories().getLogsTargetDir().toString());
 
-        // listen on all interfaces
-        config.put("network.bind_host", "0.0.0.0");
+        config.put("network.bind_host", localConfiguration.getBindAddress());
+        //config.put("network.publish_host", Tools.getLocalCanonicalHostname());
+
+        // Uncomment the following line to get DEBUG logs for the underlying Opensearch
+        //config.put("logger.org.opensearch", "debug");
 
         return config.build();
     }
